@@ -6,12 +6,5 @@ ARG app_name
 ENV LC_ALL="no_NB.UTF-8"
 ENV LANG="no_NB.UTF-8"
 ENV TZ="Europe/Oslo"
-ENV DEFAULT_JAVA_OPTS="-XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap"
-
-COPY target/$app_name-$version.jar "/app/application.jar"
-
-WORKDIR /app
-
-EXPOSE 8080
-
+COPY service/target/$app_name-$version.jar "/app/application.jar"
 CMD java -jar $DEFAULT_JAVA_OPTS $JAVA_OPTS /app/application.jar
